reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_enum_documented.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestEnumDocumented<u8>>().input_types"
snapshot_kind: text
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "name": "reflectapi_demo::tests::basic::TestEnumDocumented",
      "description": "Some Enum docs\nmore",
      "parameters": [
        {
          "name": "T",
          "description": "some generic param docs\nmultiline"
        }
      ],
      "variants": [
        {
          "name": "Variant1",
          "description": "Variant1 docs",
          "fields": {
            "unnamed": [
              {
                "name": "0",
                "description": "variant1 field docs",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        },
        {
          "name": "Variant2",
          "description": "Variant2 docs\nmultiline\nmore\nmore",
          "fields": {
            "named": [
              {
                "name": "named_field",
                "description": "named field variant2 field docs",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
