reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_documented.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super::into_input_schema::<TestStructDocumented>().input_types"
snapshot_kind: text
---
{
  "types": [
    {
      "kind": "struct",
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "struct",
      "name": "reflectapi_demo::tests::basic::TestStructDocumented",
      "description": "Some Struct docs\nmore\nmore",
      "fields": {
        "named": [
          {
            "name": "f",
            "description": "field docs\nmultiline",
            "type": {
              "name": "u8"
            },
            "required": true
          }
        ]
      }
    },
    {
      "kind": "primitive",
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
