reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_string_reflectapi_both_with_attributes-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.output.TestStructOneBasicFieldStringReflectBothDifferently"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "i32": {
        "description": "32-bit signed integer",
        "type": "integer"
      },
      "reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.input.TestStructOneBasicFieldStringReflectBothDifferently",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "$ref": "#/components/schemas/i32"
          }
        }
      },
      "reflectapi_demo.tests.basic.output.TestStructOneBasicFieldStringReflectBothDifferently": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.output.TestStructOneBasicFieldStringReflectBothDifferently",
        "required": [
          "_f"
        ],
        "properties": {
          "_f": {
            "$ref": "#/components/schemas/u32"
          }
        }
      },
      "u32": {
        "description": "32-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
