reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_one_basic_field_string_reflectapi_both_with_attributes.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::basic::input::TestStructOneBasicFieldStringReflectBothDifferently"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::basic::output::TestStructOneBasicFieldStringReflectBothDifferently"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "primitive",
        "name": "i32",
        "description": "32-bit signed integer"
      },
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::input::TestStructOneBasicFieldStringReflectBothDifferently",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "i32"
              },
              "required": true
            }
          ]
        }
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "struct",
        "name": "reflectapi_demo::tests::basic::output::TestStructOneBasicFieldStringReflectBothDifferently",
        "fields": {
          "named": [
            {
              "name": "_f",
              "type": {
                "name": "u32"
              },
              "required": true
            }
          ]
        }
      },
      {
        "kind": "primitive",
        "name": "u32",
        "description": "32-bit unsigned integer"
      }
    ]
  }
}
