reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_additional_derives-4.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.Test"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.Test"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.Test": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.Test",
        "required": [
          "us",
          "xs",
          "ys"
        ],
        "properties": {
          "us": {
            "description": "Value set type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/reflectapi_demo.tests.basic.U"
            },
            "uniqueItems": true
          },
          "xs": {
            "description": "Value set type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/reflectapi_demo.tests.basic.X"
            },
            "uniqueItems": true
          },
          "ys": {
            "description": "Value set type",
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/reflectapi_demo.tests.basic.Y"
            },
            "uniqueItems": true
          }
        }
      },
      "reflectapi_demo.tests.basic.U": {
        "type": "array",
        "prefixItems": [
          {
            "$ref": "#/components/schemas/std.tuple.Tuple0"
          }
        ]
      },
      "reflectapi_demo.tests.basic.X": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.X",
        "properties": {}
      },
      "reflectapi_demo.tests.basic.Y": {
        "oneOf": [
          {
            "const": "Y"
          }
        ]
      },
      "std.tuple.Tuple0": {
        "description": "Unit type",
        "type": "null"
      }
    }
  }
}
