reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_struct_with_all_primitive_type_fields-3.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: "super :: into_rust_code :: < TestStructWithAllPrimitiveTypeFields > ()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn new(client: C) -> Self {
            Self { client }
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::basic::TestStructWithAllPrimitiveTypeFields,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::basic::TestStructWithAllPrimitiveTypeFields,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(&self.client, "/inout_test", input, headers).await
        }
    }

    #[cfg(feature = "reqwest")]
    impl Interface<reflectapi::rt::ReqwestClient<reqwest::Client>> {
        /// Convenience: build the client backed by a bare `reqwest::Client`
        /// and the given base URL. Hides the
        /// [`reflectapi::rt::ReqwestClient`] adapter so callers don't need
        /// to name it.
        pub fn try_new(
            client: reqwest::Client,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            Ok(Self::new(reflectapi::rt::ReqwestClient::try_new(
                client, base_url,
            )?))
        }
    }
}
pub mod types {
    pub mod reflectapi_demo {
        pub mod tests {
            pub mod basic {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct TestStructWithAllPrimitiveTypeFields {
                    pub _f_u8: u8,
                    pub _f_u16: u16,
                    pub _f_u32: u32,
                    pub _f_u64: u64,
                    pub _f_u128: u128,
                    pub _f_usize: usize,
                    pub _f_i8: i8,
                    pub _f_i16: i16,
                    pub _f_i32: i32,
                    pub _f_i64: i64,
                    pub _f_i128: i128,
                    pub _f_isize: isize,
                    pub _f_f32: f32,
                    pub _f_f64: f64,
                    pub _f_bool: bool,
                    pub _f_char: char,
                    pub _f_str: std::string::String,
                    pub _f_unit: (),
                    pub _f_option: std::option::Option<u8>,
                    pub _f_vec: std::vec::Vec<u8>,
                    pub _f_hashmap: std::collections::HashMap<u8, std::string::String>,
                    pub _f_hashset: std::collections::HashSet<u8>,
                    pub _f_tuple: (u8, std::string::String),
                    pub _f_tuple3: (u8, std::string::String, u8),
                    pub _f_tuple4: (u8, std::string::String, u8, std::string::String),
                    pub _f_tuple5: (u8, std::string::String, u8, std::string::String, u8),
                    pub _f_tuple6: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                    ),
                    pub _f_tuple7: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                    ),
                    pub _f_tuple8: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                    ),
                    pub _f_tuple9: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                    ),
                    pub _f_tuple10: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                    ),
                    pub _f_tuple11: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                    ),
                    pub _f_tuple12: (
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                        u8,
                        std::string::String,
                    ),
                    pub _f_array: [u8; 3],
                    pub _f_pointer_box: std::boxed::Box<u8>,
                    pub _f_pointer_arc: std::sync::Arc<u8>,
                    pub _f_pointer_cell: std::cell::Cell<u8>,
                    pub _f_pointer_refcell: std::cell::RefCell<u8>,
                    pub _f_pointer_mutex: std::sync::Mutex<u8>,
                    pub _f_pointer_rwlock: std::sync::RwLock<u8>,
                    pub _f_pointer_weak: std::sync::Weak<u8>,
                    pub _f_phantomdata: std::marker::PhantomData<u8>,
                    pub _f_infallible: reflectapi::Infallible,
                }
            }
        }
    }
}
